--- a/views/script.html
+++ b/views/script.html
@@ -17,6 +17,6 @@
 <script src="Chart.min.js"></script>
 
 <!-- Page level custom scripts -->
-<script src="Chart-status.js"></script>
+<script src="chart-status.js"></script>
 <script src="chart-pie-demo.js"></script>
 <script src="chart-area-demo.js"></script>
