--- a/views/section_dot.html
+++ b/views/section_dot.html
@@ -13,6 +13,7 @@
       "
     >
       <h6 class="m-0 font-weight-bold text-primary">예측 입도자 수</h6>
+      <div class="mr-auto ml-3">횡보추세</div>
     </div>
     <!-- Card Body -->
     <div class="card-body">
