--- a/views/index2.html
+++ b/views/index2.html
@@ -52,7 +52,7 @@
         class="container d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a>제주 코로나 종합 관리실<span>.</span></a>
+          <a>제주코로나종합상황실<span>.</span></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -81,8 +81,8 @@
           data-aos-delay="150"
         >
           <div class="col-xl-10 col-lg-8">
-            <h1>제주도 코로나 예방<span>.</span></h1>
-            <h1>All In One<span>.</span></h1>
+            <h1>제주도 코로나 예방</h1>
+            <h1>prevent <span>+</span> predict</h1>
             <h2>AI와 BigData 및 기후 데이터를 활용한 리얼 프리벤션 시스템</h2>
           </div>
         </div>
