--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,9 +447,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") top center;
+  background: url("../img/bg6.jpg") top center;
   background-size: cover;
   position: relative;
+  color: black;
 }
 
 #hero:before {
